Prefer document->addConsoleMessage to document->domWindow->console->addMessage. https://bugs.webkit.org/show_bug.cgi?id=100850

Reviewed by Adam Barth.

For historical reasons, a few places in WebCore talk to Console directly
via 'document()->domWindow()->console()->addMessage(...)'. This is more
safely wrapped by calling 'addConsoleMessage' on the Document itself.

No visible functionality should change; we'll simply avoid potential
null dereferences in the future.

Source/WebCore:

* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::validateInteractively):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::printWarningToConsole):
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::reportLocalLoadFailed):
* loader/MixedContentChecker.cpp:
(WebCore::MixedContentChecker::logWarning):
* loader/appcache/ApplicationCacheGroup.cpp:
(WebCore::ApplicationCacheGroup::abort):
(WebCore::ApplicationCacheGroup::didReceiveResponse):
(WebCore::ApplicationCacheGroup::didFinishLoading):
(WebCore::ApplicationCacheGroup::didFail):
(WebCore::ApplicationCacheGroup::didReceiveManifestResponse):
(WebCore::ApplicationCacheGroup::didFinishLoadingManifest):
(WebCore::ApplicationCacheGroup::checkIfLoadIsComplete):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::printAccessDeniedMessage):

Source/WebKit/chromium:

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::addMessageToConsole):


Canonical link: https://commits.webkit.org/118930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133053 268f45cc-cd09-0410-ab3c-d52691b4dbfc